Fix popover overlap

--- a/css/PopoverMenu.css
+++ b/css/PopoverMenu.css
@@ -2,7 +2,7 @@
     background: var(--autoql-vanilla-background-color-primary);
     position: absolute;
     top: 40px;
-    left: -205px;
+    left: -70px;
     right: 0;
     z-index: 9999;
     border: 1px solid hsla(0,0%,67.1%,.32);
@@ -16,7 +16,7 @@
 
 .chata-popover-single-message{
     left: 0 !important;
-    right: -205px;
+    right: -120px;
 }
 
 .chata-popover-wrapper.report-problem{
